# gitbook-downloader

./: .gitignore  MANIFEST.in  README.md  __init__.py  app.py  cli.py  documentation_downloader.py  fly.toml  gitbook_downloader.py  package.json  pyproject.toml  requirements.txt  setup.py  test-prompt.md  test.py  test_readme_scraper.py  test_scraper.py  test_version_path.py
gitbook_downloader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scrapers/: __init__.py  base_scraper.py  docusaurus_scraper.py  gitbook_scraper.py  mintlify_scraper.py  mkdocs_scraper.py  readme_scraper.py  scraper_factory.py  sphinx_scraper.py
templates/: index.html
tests-21/: aztec-docs.md  gmtribe-docs.md  metadao-docs.md  metalex-docs.md  noir-docs.md  zama-protocol-docs.md  zama-solidity-docs.md  zamm-docs.md
